--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/router": "~12.1.0",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "bootstrap": "^4.5.0",
+    "primeicons": "^4.1.0",
+    "primeng": "^12.1.0-rc.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
